--- a/inside_server/Dockerfile
+++ b/inside_server/Dockerfile
@@ -1,5 +1,6 @@
 FROM httpd:2.4.53
-RUN apt-get update -qq && apt-get install -y openssh-server ssh sudo iputils-ping vim iproute2 curl unzip net-tools
+RUN apt-get update -qq && \
+DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC  apt-get install -y openssh-server ssh sudo iputils-ping vim iproute2 curl unzip net-tools 
 
 # SSH Service
 RUN useradd -rm -d /home/ubuntu -s /bin/bash -g root -G sudo -u 1000 inside
@@ -10,4 +11,6 @@ COPY start.sh /
 RUN chmod u+x /start.sh
 COPY www/index.html /usr/local/apache2/htdocs
 RUN chown www-data:www-data /usr/local/apache2/htdocs/index.html
+# Set prompt
+RUN echo 'PS1=inside_server":"$PS1' >> /root/.bashrc
 CMD ["/start.sh"]
