--- a/jumphost/Dockerfile
+++ b/jumphost/Dockerfile
@@ -2,7 +2,7 @@ FROM ubuntu:21.10
 RUN apt-get update -qq && \ 
 DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC apt-get install -y openssh-server ssh sudo iputils-ping vim iproute2 curl unzip net-tools \
 # for reverse/local portforwarding tunnel plink \
-wine-stable \
+wine-stable wine64 \
 # for local portforwarding socat \
 socat \
 # for local portforwarding rinetd \
@@ -11,7 +11,7 @@ rinetd \
 iptables
 
 # Wine configuration for plink
-RUN dpkg --add-architecture i386 && apt-get update -qq && apt-get -y install wine32
+#RUN dpkg --add-architecture i386 && apt-get update -qq && apt-get -y install wine32
 
 # SSH Service
 RUN useradd -rm -d /home/ubuntu -s /bin/bash -g root -G sudo -u 1000 jumphost
