--- a/outside/Dockerfile
+++ b/outside/Dockerfile
@@ -2,10 +2,10 @@ FROM ubuntu:21.10
 RUN apt-get update -qq && \
 DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC apt-get install -y openssh-server ssh iputils-ping vim iproute2 curl unzip net-tools proxychains \
 # for plink 
-wine-stable 
+wine-stable wine64 
 
 # Wine configuration for plink
-RUN dpkg --add-architecture i386 && apt-get update -qq && apt-get -y install wine32
+#RUN dpkg --add-architecture i386 && apt-get update -qq && apt-get -y install wine32
 
 # SSH Service
 RUN useradd -rm -d /home/ubuntu -s /bin/bash -g root -G sudo -u 1000 outside
