--- a/inside_server/Dockerfile
+++ b/inside_server/Dockerfile
@@ -1,14 +1,16 @@
-FROM httpd:2.4.53
+FROM httpd:2.4.54
 RUN apt-get update -qq && \
 DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC  apt-get install -y openssh-server ssh sudo iputils-ping vim iproute2 curl unzip net-tools 
 
-# SSH Service
+# Add user
 RUN useradd -rm -d /home/ubuntu -s /bin/bash -g root -G sudo -u 1000 inside
 RUN echo 'inside:inside' | chpasswd
+# SSH Service
 RUN service ssh start
 
 COPY start.sh /
 RUN chmod u+x /start.sh
+# Set up web server
 COPY www/index.html /usr/local/apache2/htdocs
 RUN chown www-data:www-data /usr/local/apache2/htdocs/index.html
 # Set prompt
