--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,14 @@ services:
     networks:
         outside_network:
            ipv4_address: 192.168.1.3
+    # cap add needed for sshuttle (cf https://unix.stackexchange.com/questions/459206/list-ip-tables-in-docker-container)
+    # otherwise 
+    # iptables (nf_tables): Could not fetch rule set generation id: Permission denied (you must be root)
+    # iptables (nf_tables): Could not fetch rule set generation id: Permission denied (you must be root)
+    # fw: fatal: fw: ['iptables', '-t', 'nat', '-nL'] returned 4
+    # c : fatal: cleanup: ['/usr/bin/python3', '/usr/bin/sshuttle', '--method', 'auto', '--firewall'] returned 99
+    cap_add:
+      - NET_ADMIN
   jumphost:
     container_name: "jumphost"
     build: "./jumphost"
@@ -14,8 +22,6 @@ services:
            ipv4_address: 192.168.1.5
         inside_network:
            ipv4_address: 192.168.2.5     
-    cap_add:
-     - NET_ADMIN
   inside_server:
     container_name: "inside_server"
     build: "./inside_server"
